syntax = "proto3";

option csharp_namespace = "DevBlog.AdminCli.Protos";

package content;

service Content {
  rpc Publish (PublishRequest) returns (Result);
  rpc Update (UpdateRequest) returns (Result);
  rpc Delete (DeleteRequest) returns (Result);
}

message PublishRequest {
  string id = 1;
  string title = 2;
  string url = 3;
  string format = 4;
  bool hidden = 5;
}

message UpdateRequest {
  string id = 1;
  string title = 2;
  string url = 3;
  string format = 4;
  bool hidden = 5;
}

message DeleteRequest {
  string id = 1;
}

message Result {
  bool success = 1;
  string message = 2;
}
